<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="6dp"
               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView"
                        android:layout_width="150dp"
                        android:layout_height="180dp"
                        android:src="@drawable/sucursal1"
                        android:scaleType="centerCrop"
                         />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="20dp"
                            android:text="@string/nombre_sucursal1"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="4dp"
                            android:text="@string/horario_sucursal1"/>


                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="6dp"
               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView2"
                        android:layout_width="150dp"
                        android:layout_height="180dp"
                        android:src="@drawable/sucursal2"
                        android:scaleType="centerCrop"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="20dp"
                            android:text="@string/nombre_sucursal2"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="4dp"
                            android:text="@string/horario_sucursal2"/>

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="6dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView3"
                        android:layout_width="150dp"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sucursal3"
                         />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="20dp"
                            android:text="@string/nombre_sucursal3"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="4dp"
                            android:text="@string/horario_sucursal3"/>


                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="6dp"
               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView4"
                        android:layout_width="150dp"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sucursal4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="20dp"
                            android:text="@string/nombre_sucursal4"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="4dp"
                            android:text="@string/horario_sucursal4"/>


                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="6dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView5"
                        android:layout_width="150dp"
                        android:layout_height="180dp"
                        android:src="@drawable/sucursal5"
                        android:scaleType="centerCrop"
                         />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="vertical"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="20dp"
                            android:text="@string/nombre_sucursal5"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:justificationMode="inter_word"
                            android:maxLines="9"
                            android:paddingStart="10dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="4dp"
                            android:text="@string/horario_sucursal5"/>


                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>